--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "framer-motion": "^8.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.5",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.1",
     "sass": "^1.58.3",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
