--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "TagCloud": "^2.3.2",
     "animate.css": "^4.1.1",
     "framer-motion": "^8.4.2",
+    "i18next": "^22.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
+    "react-i18next": "^12.3.1",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
