--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-toastify": "^9.1.1",
     "sass": "^1.58.3",
     "slick-carousel": "^1.8.1",
+    "swiper": "^10.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
